# Search-Engine

./: CMakeLists.txt  Document.h  DocumentParser.cpp  DocumentParser.h  Index.h  IndexHandler.cpp  IndexHandler.h  QueryEngine.cpp  QueryEngine.h  README.md  main.cpp  word.h
scripts/: AvlTree.cpp  AvlTree.h  DLListNode.h  DSLinkedList.h  DSStack.h  DSString.cpp  DSString.h  DSVector.h  ExportData.h  Hashtable.h  catch.hpp  hashFunction.cpp  hashFunction.h  test.cpp  title_date.csv
scripts/StopWord/: stopwords.txt
scripts/json_parser/: ReadMe.md
timing_demo_data_sets/__MACOSX/: ._timing_demo_data_sets
timing_demo_data_sets/__MACOSX/timing_demo_data_sets/ds_02/: ._0d1448dbed0b123a78907316826d116ad97cfbcf.json
timing_demo_data_sets/__MACOSX/timing_demo_data_sets/ds_03/: ._0a32446730827ad8152c6a61e4738e4e0b231412.json  ._3331e1bb231ae4227e4b6e8e98412b17468747a1.json  ._4d2600919d48235342c2d36933db873933a9aab8.json
